fixed legend align

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -617,6 +617,7 @@
             font-weight: bold;
         }
         > table {
+            width: 100%;
             border-spacing: 0;
             border-collapse: separate;
             td {
